--- a/Distritos/Distritos/Distritos.vbproj
+++ b/Distritos/Distritos/Distritos.vbproj
@@ -133,5 +133,8 @@
   <ItemGroup>
     <None Include="Resources\menu.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logout.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
